# deadnews-template-rust

./: .gitignore  .goreleaser.yaml  .hadolint.yaml  .pre-commit-config.yaml  .renovaterc.json  .taplo.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  Makefile.test.mk  README.md  cliff.toml  compose.dev.yml  compose.sample.yml  compose.yml  coverage.json  docker-compose.yml  prek.toml
.github/workflows/: audit.yml  deps.yml  docker.yml  main.yml
.zed/: settings.json
src/: app.rs  config.rs  db.rs  error.rs  handler.rs  main.rs  routing.rs  test.rs
