[package]
name        = "deadnews-template-rust"
description = "Rust Project Template"
version     = "0.0.0"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/deadnews/deadnews-template-rust"
keywords    = ["sample", "template"]

[dependencies]
anyhow             = { version = "1.0.100" }
axum               = { version = "0.8.7" }
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = { version = "1.0.142" }
sqlx               = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-ring"] }
tokio              = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tracing            = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[dev-dependencies]
testcontainers         = { version = "0.25" }
testcontainers-modules = { version = "0.13", features = ["postgres"] }
tower                  = { version = "0.5" }

[profile.release]
lto   = true # Enable Link Time Optimization
strip = true # Remove debug symbols and reduce binary size
