[package]
name        = "deadnews-template-rust"
description = "Rust Project Template"
version     = "0.0.0"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/deadnews/deadnews-template-rust"
keywords    = ["sample", "template"]

[dependencies]
anyhow             = { version = "1.0" }
axum               = { version = "0.8" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
sqlx               = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio              = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower              = { version = "0.5" }
tower-http         = { version = "0.6", features = ["catch-panic", "request-id", "trace"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
axum-test      = { version = "18.7" }
testcontainers = { version = "0.26" }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1" }

[profile.release]
lto   = true # Enable Link Time Optimization
strip = true # Remove debug symbols and reduce binary size

[profile.dev-build]
inherits = "dev"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
