[package]
name        = "deadnews-template-rust"
description = "Rust Project Template"
version     = "0.0.0"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/deadnews/deadnews-template-rust"
keywords    = ["sample", "template"]

[dependencies]
anyhow             = { version = "1.0" }
axum               = { version = "0.8" }
serde              = { version = "1.0", features = ["derive"] }
sqlx               = { version = "0.9", features = ["postgres", "runtime-tokio"] }
tokio              = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower              = { version = "0.5" }
tower-http         = { version = "0.7", features = ["catch-panic", "request-id", "trace"] }
tracing            = { version = "0.1" }
tracing-logfmt     = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test      = { version = "21.0" }
serde_json     = { version = "1.0" }
testcontainers = { version = "0.27" }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1" }

[profile.release]
codegen-units = 1
lto           = true
strip         = true

[profile.dev-build]
inherits = "dev"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
